--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.4.1",
