--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build:
-      context: ../web                          # frontend source folder
+      context: ../web
       dockerfile: ../infra/docker/web.Dockerfile
     env_file:
       - ./env/production.env
@@ -10,7 +10,7 @@ services:
 
   server:
     build:
-      context: ../server                       # backend source folder
+      context: ../server
       dockerfile: ../infra/docker/server.Dockerfile
     env_file:
       - ./env/production.env
