--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       dockerfile: ../infra/docker/web.Dockerfile
     env_file:
       - ./env/production.env
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
 
   server:
     build:
@@ -14,5 +14,16 @@ services:
       dockerfile: ../infra/docker/server.Dockerfile
     env_file:
       - ./env/production.env
+    expose:
+      - "4000"
+
+  nginx:
+    image: nginx:latest
     ports:
-      - "4000:4000"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - web
+      - server
