Update nginx config and rebuild docker images

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,19 +1,12 @@
 server {
-    listen 80;
-
+    listen 443 ssl;
     server_name posthog.rashidnazari.com;
+
+    ssl_certificate /etc/ssl/cloudflare/cert.pem;
+    ssl_certificate_key /etc/ssl/cloudflare/key.pem;
 
     location / {
         proxy_pass http://web:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /api/ {
-        proxy_pass http://server:4000/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
