--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -23,7 +23,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/ssl/cloudflare/cert.pem:/etc/ssl/cloudflare/cert.pem:ro
+      - /etc/ssl/cloudflare/key.pem:/etc/ssl/cloudflare/key.pem:ro
     depends_on:
       - web
       - server
