fix: remove duplicated server directory and fix structure

--- a/infra/env/production.env
+++ b/infra/env/production.env
@@ -1,20 +1,27 @@
-# ===========================
-# Backend Configuration
-# ===========================
+#############################
+#       BACKEND CONFIG      #
+#############################
 
-# پورت سرور بک‌اند
+# Backend server port
 SERVER_PORT=4000
 
-# کلید واقعی PostHog — مقدار را از چت قبلی قرار دادی
+# PostHog API
 POSTHOG_API_KEY=phc_9LhkwALp1yKFMroS5JzNMXe7OvkmO4LdepFj5m6zX1X
+POSTHOG_PERSONAL_API_KEY=phx_Ecl1fbqJLCkwo6XZ3nVGHXUouMWB35UBqweEz5ZgRn0qgo0
+POSTHOG_API_URL=https://us.i.posthog.com
+POSTHOG_PROJECT_ID=255926
 
-# آدرس API پست‌هاگ
-POSTHOG_API_URL=https://app.posthog.com
+#############################
+#       FRONTEND CONFIG     #
+#############################
 
-
-# ===========================
-# Frontend Configuration
-# ===========================
-
-# آدرس کامل API که فرانت‌اند به آن درخواست می‌زند
+# Frontend API base URL (NGINX reverse proxy)
 NEXT_PUBLIC_API_BASE_URL=https://posthog.rashidnazari.com/api
+
+#############################
+#        GENERAL CONFIG     #
+#############################
+
+# Node environment
+NODE_ENV=production
+
