--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "axios": "^1.6.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.16.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
